tests/errors/syn_while9.java
public class syn_while9 {
public static void main(String[] args){
while ( true || false {
 
}
}
}